# rbe577_hw1

./: .gitignore  README.md  control_allocator.py  plot_utilities.py  pyproject.toml  requirements.txt  vmap_workaround.py
best_outputs/: best_model_params.txt
report/: control_allocator_report.tex
